Upd: 07.07.2024 (release version)
- sorted scripts
- cleared comments
- bug fixes
- unnecessary code and files have been removed

--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "bukovel",
   "version": "1.0.0",
   "description": "Bukovel - is the largest ski resort in Eastern Europe situated in Ukraine.",
-  "main": "./public/main.php",
+  "main": "./public/welcomePage.php",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
